--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Replaces words with other words of the same part-of-speech.",
   "main": "index.js",
+  "bin": {
+    "wordVomit": "cmd.js"
+  },
   "scripts": {
     "test": "node test.js"
   },
@@ -10,7 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "pos": "^0.1.9",
-    "spewer": "^0.1.2"
+    "spewer": "^0.1.2",
+    "yargs": "^3.15.0"
   },
   "devDependencies": {
     "browserify": "^10.2.4",
